@@ -4,9 +4,9 @@
  * Internal dependencies
  */
 import { getTasks, taskSort } from '../tasks';
-import createAdditionalMethodsSetupTask from '../../../additional-methods-setup/task';
+import createMultiCurrencySetupTask from '../../../multi-currency-setup/task';
 
-jest.mock( '../../../additional-methods-setup/task', () => jest.fn() );
+jest.mock( '../../../multi-currency-setup/task', () => jest.fn() );
 
 describe( 'getTasks()', () => {
 	it( 'should include business details when flag is set', () => {
@@ -112,12 +112,7 @@ describe( 'getTasks()', () => {
 	} );
 
 	it( 'returns the expected keys when the account overview flag is enabled', () => {
-		createAdditionalMethodsSetupTask.mockReturnValue( {
-			key: 'woocommerce-payments--additional-payment-methods',
-		} );
-
 		const tasks = getTasks( {
-			additionalMethodsSetup: { isTaskVisible: true },
 			isAccountOverviewTasksEnabled: true,
 			showUpdateDetailsTask: 'yes',
 			wpcomReconnectUrl: 'http://example.com',
@@ -130,20 +125,12 @@ describe( 'getTasks()', () => {
 				expect.objectContaining( { key: 'update-business-details' } ),
 				expect.objectContaining( { key: 'reconnect-wpcom-user' } ),
 				expect.objectContaining( { key: 'force-secure-checkout' } ),
-				expect.objectContaining( {
-					key: 'woocommerce-payments--additional-payment-methods',
-				} ),
 			] )
 		);
 	} );
 
 	it( 'returns the expected keys when the account overview flag is disabled', () => {
-		createAdditionalMethodsSetupTask.mockReturnValue( {
-			key: 'woocommerce-payments--additional-payment-methods',
-		} );
-
 		const tasks = getTasks( {
-			additionalMethodsSetup: { isTaskVisible: true },
 			showUpdateDetailsTask: 'yes',
 			wpcomReconnectUrl: 'http://example.com',
 			accountStatus: {},
@@ -157,65 +144,8 @@ describe( 'getTasks()', () => {
 				expect.objectContaining( { key: 'force-secure-checkout' } ),
 			] )
 		);
-		expect( tasks ).toEqual(
-			expect.arrayContaining( [
-				expect.objectContaining( {
-					key: 'woocommerce-payments--additional-payment-methods',
-				} ),
-			] )
-		);
 	} );
 
-	describe( 'additional method setup task', () => {
-		beforeEach( () => {
-			createAdditionalMethodsSetupTask.mockReturnValue( {} );
-			window.wcpaySettings = { additionalMethodsSetup: {} };
-		} );
-
-		afterEach( () => {
-			jest.restoreAllMocks();
-		} );
-
-		it( 'renders task if `isTaskVisible` is true', () => {
-			createAdditionalMethodsSetupTask.mockReturnValue( {
-				key: 'woocommerce-payments--additional-payment-methods',
-			} );
-
-			const actual = getTasks( {
-				additionalMethodsSetup: { isTaskVisible: true },
-				accountStatus: {},
-				isAccountOverviewTasksEnabled: true,
-			} );
-
-			expect( actual ).toEqual(
-				expect.arrayContaining( [
-					expect.objectContaining( {
-						key: 'woocommerce-payments--additional-payment-methods',
-					} ),
-				] )
-			);
-		} );
-
-		it( 'does not render task if `isTaskVisible` is false', () => {
-			createAdditionalMethodsSetupTask.mockReturnValue( {
-				key: 'woocommerce-payments--additional-payment-methods',
-			} );
-
-			const actual = getTasks( {
-				additionalMethodsSetup: { isTaskVisible: false },
-				accountStatus: {},
-				isAccountOverviewTasksEnabled: true,
-			} );
-
-			expect( actual ).toEqual(
-				expect.not.arrayContaining( [
-					expect.objectContaining( {
-						key: 'woocommerce-payments--additional-payment-methods',
-					} ),
-				] )
-			);
-		} );
-	} );
 	it( 'should not include the dispute resolution task', () => {
 		const disputes = [];
 		const actual = getTasks( {
@@ -302,7 +232,7 @@ describe( 'getTasks()', () => {
 
 describe( 'taskSort()', () => {
 	it( 'should sort the tasks', () => {
-		createAdditionalMethodsSetupTask.mockReturnValue( {
+		createMultiCurrencySetupTask.mockReturnValue( {
 			key: 'test-element',
 			completed: true,
 			level: 3,
@@ -332,7 +262,7 @@ describe( 'taskSort()', () => {
 				pastDue: false,
 				accountLink: 'http://example.com',
 			},
-			additionalMethodsSetup: { isTaskVisible: true },
+			multiCurrencySetup: { isTaskVisible: true },
 			isAccountOverviewTasksEnabled: true,
 			disputes,
 		} );
