@@ -70,7 +70,7 @@ const UpeSetupBanner = () => {
 		setIsUpeEnabled( true ).then( () => {
 			window.location.href = getAdminUrl( {
 				page: 'wc-admin',
-				task: 'woocommerce-payments--additional-payment-methods',
+				path: '/payments/additional-payment-methods',
 			} );
 		} );
 	};
