@@ -13,6 +13,7 @@
 * Fix - Fatal error on thank you page for deleted orders.
 * Add - Error messages when dispute evidence exceeds Stripe limits.
 * Add - Export Disputes to CSV
+* Update - Remove "Boost your sales by accepting new payment methods" from the overview tasks list.
 
 = 3.3.0 - 2021-11-18 =
 * Add - Add Idempotency Key to POST headers.
